--- a/Rmd/report.Rmd
+++ b/Rmd/report.Rmd
@@ -47,6 +47,7 @@ library(tidytext)
 library(brms)
 library(tidybayes)
 library(patchwork)
+library(tidytext)
 library(janitor)
 library(mice)
 library(here)
