--- a/Rmd/r-references.bib
+++ b/Rmd/r-references.bib
@@ -119,3 +119,13 @@
   url = {http://mjskay.github.io/tidybayes/},
   doi = {10.5281/zenodo.1308151},
 }
+@Article{R-targets,
+  title = {The targets R package: a dynamic Make-like function-oriented pipeline toolkit for reproducibility and high-performance computing},
+  author = {William Michael Landau},
+  journal = {Journal of Open Source Software},
+  year = {2021},
+  volume = {6},
+  number = {57},
+  pages = {2959},
+  url = {https://doi.org/10.21105/joss.02959},
+}
