knit manuscript to PDF

--- a/Rmd/references.bib
+++ b/Rmd/references.bib
@@ -532,3 +532,133 @@
   year={1975},
   publisher={American Psychological Association}
 }
+
+@article{costa2000cognate,
+  title={The cognate facilitation effect: implications for models of lexical access.},
+  author={Costa, Albert and Caramazza, Alfonso and Sebastian-Galles, Nuria},
+  journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  volume={26},
+  number={5},
+  pages={1283},
+  year={2000},
+  publisher={American Psychological Association}
+}
+
+@article{christoffels2006memory,
+  title={Memory and language skills in simultaneous interpreters: The role of expertise and language proficiency},
+  author={Christoffels, Ingrid K and De Groot, Annette MB and Kroll, Judith F},
+  journal={Journal of Memory and Language},
+  volume={54},
+  number={3},
+  pages={324--345},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{christoffels2013language,
+  title={Language conflict in translation: An ERP study of translation production},
+  author={Christoffels, Ingrid K and Ganushchak, Lesya and Koester, Dirk},
+  journal={Journal of Cognitive Psychology},
+  volume={25},
+  number={5},
+  pages={646--664},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@article{van1998orthographic,
+  title={Orthographic neighborhood effects in bilingual word recognition},
+  author={Van Heuven, Walter JB and Dijkstra, Ton and Grainger, Jonathan},
+  journal={Journal of memory and language},
+  volume={39},
+  number={3},
+  pages={458--483},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@article{mcclelland1981interactive,
+  title={An interactive activation model of context effects in letter perception: I. An account of basic findings.},
+  author={McClelland, James L and Rumelhart, David E},
+  journal={Psychological review},
+  volume={88},
+  number={5},
+  pages={375},
+  year={1981},
+  publisher={American Psychological Association}
+}
+
+@article{dijkstra2002architecture,
+  title={The architecture of the bilingual word recognition system: From identification to decision},
+  author={Dijkstra, Ton and Van Heuven, Walter JB},
+  journal={Bilingualism: Language and cognition},
+  volume={5},
+  number={3},
+  pages={175--197},
+  year={2002},
+  publisher={Cambridge University Press}
+}
+
+@article{dijkstra2019multilink,
+  title={Multilink: a computational model for bilingual word recognition and word translation},
+  author={Dijkstra, Ton and Wahl, Alexander and Buytenhuijs, Franka and Van Halem, Nino and Al-Jibouri, Zina and De Korte, Marcel and Rekk{\'e}, Steven},
+  journal={Bilingualism: Language and Cognition},
+  volume={22},
+  number={4},
+  pages={657--679},
+  year={2019},
+  publisher={Cambridge University Press}
+}
+
+@article{marian2012clearpond,
+  title={CLEARPOND: Cross-linguistic easy-access resource for phonological and orthographic neighborhood densities},
+  author={Marian, Viorica and Bartolotti, James and Chabal, Sarah and Shook, Anthony},
+  year={2012},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{van2014subtlex,
+  title={SUBTLEX-UK: A new and improved word frequency database for British English},
+  author={Van Heuven, Walter JB and Mandera, Pawel and Keuleers, Emmanuel and Brysbaert, Marc},
+  journal={Quarterly journal of experimental psychology},
+  volume={67},
+  number={6},
+  pages={1176--1190},
+  year={2014},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{cuetos2011subtlex,
+  title={SUBTLEX-ESP: frecuencias de las palabras espanolas basadas en los subtitulos de las peliculas},
+  author={Cuetos, Fernando and Glez-Nosti, Maria and Barbon, Analia and Brysbaert, Marc},
+  journal={Psicol{\'o}gica},
+  volume={32},
+  number={2},
+  pages={133--144},
+  year={2011},
+  publisher={Sociedad Espanola de Psicologia Experimental (SEPEX)}
+}
+
+@article{boada2020subtlex,
+  title={SUBTLEX-CAT: Subtitle word frequencies and contextual diversity for Catalan},
+  author={Boada, Roger and Guasch, Marc and Haro, Juan and Demestre, Josep and Ferr{\'e}, Pilar},
+  journal={Behavior research methods},
+  volume={52},
+  number={1},
+  pages={360--375},
+  year={2020},
+  publisher={Springer}
+}
+
+ @article{van2014stringdist,
+    title = {The stringdist package for approximate string matching},
+    author = {M.P.J. {van der Loo}},
+    year = {2014},
+    journal = {The {R} {J}ournal},
+    volume = {6},
+    issue = {1},
+    url = {https://CRAN.R-project.org/package=stringdist},
+    pages = {111-122},
+  }
+  
+
