--- a/Rmd/references.bib
+++ b/Rmd/references.bib
@@ -661,4 +661,24 @@
     pages = {111-122},
   }
   
+@inproceedings{levenshtein1966binary,
+  title={Binary codes capable of correcting deletions, insertions, and reversals},
+  author={Levenshtein, Vladimir I and others},
+  booktitle={Soviet physics doklady},
+  volume={10},
+  number={8},
+  pages={707--710},
+  year={1966},
+  organization={Soviet Union}
+}
 
+@article{costa2003another,
+  title={Another look at cross-language competition in bilingual speech production: Lexical and phonological factors},
+  author={Costa, Albert and Colom{\'e}, {\`A}ngels and G{\'o}mez, Olga and Sebasti{\'a}n-Gall{\'e}s, Nuria},
+  journal={Bilingualism: Language and Cognition},
+  volume={6},
+  number={3},
+  pages={167--179},
+  year={2003},
+  publisher={Cambridge University Press}
+}
