--- a/Rmd/manuscript.Rmd
+++ b/Rmd/manuscript.Rmd
@@ -72,20 +72,14 @@ knitr::opts_chunk$set(
   dpi = 500
 )
 
-options(
-  knitr.kable.NA = '-',
-  knitr.duplicate.label = "allow",
-  ggplot2.discrete.fill = wesanderson::wes_palettes$Darjeeling1,
-  ggplot2.discrete.colour = wesanderson::wes_palettes$Darjeeling1,
-  ggplot2.continuous.fill = wesanderson::wes_palettes$Darjeeling1,
-  ggplot2.continuous.colour = wesanderson::wes_palettes$Darjeeling1
-)
+options(knitr.kable.NA = '-', knitr.duplicate.label = "allow")
 
 ```
 
 
 ```{r prepare, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
 
+# import objects
 tar_load_globals()
 tar_load(stimuli)
 tar_load(participants)
@@ -96,30 +90,65 @@ tar_load(posterior_draws_fixed)
 tar_load(posterior_epreds_fixed)
 tar_load(posterior_epreds_random)
 
-theme_set(theme_ggdist())
+# set custom ggplot2 theme
+theme_set(
+  theme(
+    title = element_text(size = 8, face = "bold"),
+    
+    legend.background = element_rect(fill = NA, colour = NA),
+    legend.key = element_rect(fill = "white", colour = NA),
+    legend.justification = "right",
+    legend.direction = "horizontal",
+    
+    axis.line = element_line(colour = "black", size = 0.5),
+    axis.ticks = element_line(colour = "black", size = 0.5),
+    axis.text.x = element_text(colour = "black"),
+    axis.text.y = element_text(colour = "black"),
+    
+    plot.caption.position = "plot",
+    plot.title = element_text(hjust = 0.5),
+    
+    
+    panel.grid = element_blank(),
+    panel.background = element_rect(fill = "white", colour = NA)
+  )
+)
 
 ```
 
 # Introduction
 
 
-## Non-native language comprehension is difficult, but cognateness helps
+## Native speech processing is effortless
 
 
 Humans are able to recognise spoken words without much effort, even in adverse conditions such as compressed speech [@de1982relationship] or the loss of segmental information [@warren1970perceptual]. But even in the most ideal of the situations, the processes engaged in word recognition do not occur without uncertainty. The speech input activates multiple candidate lexical representations based on their similarity with the signal, and for word recognition to take place, one of the candidates must be selected. There is extensive literature about how the number of candidates, their frequency, and their phonological and semantic similarity with the target word impacts the dynamics of word recognition. But less is known about how these factors affect the recognition of words in a non-native language.
 
+## Non-antive speech processing is costly
+
 Listening to speech in a non-native language is more costly than doing so in the native language, even if one is proficient in such language. The source of this increased cognitive effort is likely to originate at multiple levels. Some examples: (1) some sounds in the speech signal do not correspond to any phoneme in the native language, (2) segmenting the speech signal relies on previous familiarity with word forms or with the statistical regularities of the language: (3) word order might be different in both languages (e.g., subject-object-verb vs. subject-verb-object.). The listener, however, is rarely completely naïve to the language they are listening to. All languages share, to some extent, similarities, frequently due to their typological closeness. These similarities which can be exploited by non-native listeners.
 
+## Cognateness aids non-native speech processing
 
-One of such commonalities occurs at the lexical level, in the for of cognateness. Cognates are cross-language synonyms whose form (e.g., phonology, orthography, signature) is similar. The cause of this similarity is frequently attributed to a shared etymological origin. Romance languages like Spanish, Italian, French or Catalan, share many cognates [@schepens2012distributions]. For example, this is the case of *puerta* and *porta* (*door* in Spanish and Catalan, respectively)^[Some form-similar cross-language synonyms are technically not cognates. For example, *sun* and *sol* (in Spanish), share their phonological onset, but their etymology points to different origins. We will use the word *cognateness* to include all form-similar cross-language synonyms for simplicity. It is highly implausible that etymology plays a direct role on language perception if it is not via form-similarity, since it is not necessary for participants in psycholinguistic experiments to be aware of the etymology of the words they encounter in the tasks to be subject to the effect of form-similarity.]. Cognates play a major role in virtually all models of bilingual lexical processing because they provide evidence that bilinguals access their lexicon in a language non-selective way: during word production and comprehension, both lexical representations are activated, and the form similarity between both impacts participants' performance in naming or lexical decision tasks. For instance, in their seminal study, @costa2000cognate asked Spanish-Catalan bilinguals to name pictures in Spanish. Unbeknownst to participants, half of the pictures' associated labels were cognates in Spanish and Catalan (e.g., *puerta*-*porta*) while the other half were non-cognates (e.g., *mesa*-*taula*). Surprisingly, participants named cognate pictures faster than non-cognate pictures, while Spanish monolinguals did not show this effect. This suggested that bilinguals activated picture's word representations in both languages, and that the phonological overlap between both labels facilitated the naming process.
-
-
-There is evidence that cognates are learnt more easily in L2 than non-cognates. For instance, @de2000hard presented 40 Dutch natives 60 pairs of translation equivalents. In each learning trial, two words were presented in a screen side-by-side: one in Dutch and one pseudoword. Pseudowords were generated in such way that were easily pronounceable and were phonotactically legal in Dutch. Word pairs varied in their form-similarity (number of shared letters, 40-70%). Participants were tested twice in the same task with one week of difference. Participants' performance was better for cognates across both testing sessions, suggesting that cognates were learnt and retained more easily than non-cognates. Converging evidence was provided by @lotto1998effects in Dutch natives learning Italian words: cognates were learnt more easily than non-cognates. 
+One of such commonalities occurs at the lexical level, in the for of cognateness. Cognates are cross-language synonyms whose form (e.g., phonology, orthography, signature) is similar. The cause of this similarity is frequently attributed to a shared etymological origin. Romance languages like Spanish, Italian, French or Catalan, share many cognates [@schepens2012distributions]. For example, this is the case of *puerta* and *porta* (*door* in Spanish and Catalan, respectively)^[Some form-similar cross-language synonyms are technically not cognates. For example, *sun* and *sol* (in Spanish), share their phonological onset, but their etymology points to different origins. We will use the word *cognateness* to include all form-similar cross-language synonyms for simplicity. It is highly implausible that etymology plays a direct role on language perception if it is not via form-similarity, since it is not necessary for participants in psycholinguistic experiments to be aware of the etymology of the words they encounter in the tasks to be subject to the effect of form-similarity.].
 
 
-Cognates are not only learnt faster than non-cognates, but translated faster too. The mechanisms behind this effect, though, are still unclear. Early accounts of bilingual lexical access suggested that low-proficiency learners first established links between newly learnt words in L2 and their meanings through their L1 translation equivalents [@potter1984lexical]. As learners become more proficient, the connection between L2 representations and their meaning grows stronger, and L2 word processing becomes less reliant on the mediation of L1 representations. The Revised Hierarchical Model [RHM; @kroll1994category] captured this assumption and predicted that translating words from L1 to L2 (forward translation) should take longer than translating from L2 to L1 (backward translation). The rationale behind this prediction is that backward translation relies more strongly on direct word-word links between L1 and L2 representations, while forward translation would rely more strongly on the mediation between the concept and the two word forms. One of the consequences of this prediction is that backward translation should be more sensitive to the form similarity between the L1 and the L2 representations: cognate words should be retrieved faster than non-cognate words iduring backward translation.
+## The cognate advantage in comprehension, production, and learning
+
+Cognates play a major role in virtually all models of bilingual lexical processing because they provide evidence that bilinguals access their lexicon in a language non-selective way: during word production and comprehension, both lexical representations are activated, and the form similarity between both impacts participants' performance in naming or lexical decision tasks [e.g., @costa2000cognate; @thierry2007brain]. For instance, in their seminal study, @costa2000cognate asked Spanish-Catalan bilinguals to name pictures in Spanish. Unbeknownst to participants, half of the pictures' associated labels were cognates in Spanish and Catalan (e.g., *puerta*-*porta*) while the other half were non-cognates (e.g., *mesa*-*taula*). Surprisingly, participants named cognate pictures faster than non-cognate pictures, while Spanish monolinguals did not show this effect. This suggested that bilinguals activated picture's word representations in both languages, and that the phonological overlap between both labels facilitated the naming process.
+
+There is also evidence that cognates are learnt more easily in L2 than non-cognates. For instance, @de2000hard presented 40 Dutch natives 60 pairs of translation equivalents. In each learning trial, two words were presented in a screen side-by-side: one in Dutch and one pseudoword. Pseudowords were generated in such way that were easily pronounceable and were phonotactically legal in Dutch. Word pairs varied in their form-similarity (number of shared letters, 40-70%). Participants were tested twice in the same task with one week of difference. Participants' performance was better for cognates across both testing sessions, suggesting that cognates were learnt and retained more easily than non-cognates. Converging evidence was provided by @lotto1998effects in Dutch natives learning Italian words: cognates were learnt more easily than non-cognates. 
+
+
+
+### The cognate advantage in translation: the RMH model
+
+Cognates are not only learnt faster than non-cognates, but translated faster too. The mechanisms behind this effect, though, are still unclear. Early accounts of bilingual lexical access suggested that low-proficiency learners first established links between newly learnt words in L2 and their meanings through their L1 translation equivalents [@potter1984lexical]. As learners become more proficient, the connection between L2 representations and their meaning grows stronger, and L2 word processing becomes less reliant on the mediation of L1 representations. The Revised Hierarchical Model [RHM; @kroll1994category] captured this assumption and predicted that translating words from L1 to L2 (forward translation) should take longer than translating from L2 to L1 (backward translation). The rationale behind this prediction is that backward translation relies more strongly on direct word-word links between L1 and L2 representations, while forward translation would rely more strongly on the mediation between the concept and the two word forms. One of the consequences of this prediction is that backward translation should be more sensitive to the form similarity between the L1 and the L2 representations: cognate words should be retrieved faster than non-cognate words during backward translation.
 
 To test these predictions, @degroot1994forward and @de1992determinants asked 52 Dutch natives with high (yet non-native) English proficiency to translate words from either Dutch to English (forward translation, L1 to L2) or from English to Dutch (backward translation, L2 to L1). In each trial, participants were presented visually with a word in English or Dutch, and were asked to speak out loud its translation in the other language as soon as possible. The authors reported three main findings: (1) translation times and accuracy were roughly equivalent in across both forward and backward conditions (although slightly faster in the former), (2) semantic variables, such as imageability, were positively associated with participants' performance more strongly in the forward translation conditional, although the effect size was small, (3) cognates were translated equally fast in both conditions, but non-cognates were translated faster during backward translation than during forward translation, and (4) when translating cognates participants' performance across both conditions was less sensitive to semantic variables than when translating non-cognates. These results prompted the authors to reject a hard version @kroll1994category's account, and suggested that both conceptually mediated and direct translation routes are active during translation, but backward translation relies more strongly on direct links between L1 and L2 representations, which makes it more sensitive to cognateness than forward translation. When the authors tested a group of bilinguals with higher proficiency in English, their results pointed in the same direction. Subsequent studies did not find differences in participant's performance during forward and backward translation, or even found better performances in forward translation [@christoffels2006memory; @christoffels2013language], contrary to the predictions of the RHM.
+
+
+## The impact of neighbourhoods lexical processing: the NAM and the BIA/BIA+ models
 
 
 The idealised lexicon considered by the models described above only considers word-word connections between translation equivalents. More recent studies have highlighted the role of the rich network of connections that given word establishes with other phonologically or conceptually related words. This notion was first introduced in monolingual research by @collins1975spreading in their theory of semantic processing, and later @luce1998recognizing formalised this dimension in their Neighbourhood Activation Model (NAM). In this model, lexical selection is mediated not only by the lexical frequency of the target word, and the number of activated candidates, but also by the frequency of the candidates. @luce1998recognizing designed a lexical decision task in which English native participants listened to a word across several conditions of noise-to-signal ratio. The authors then used a computerised lexicon to calculate the number of phonological neighbours around each of the presented words, based on phonetic similarity matrices, and the average lexical frequency of such neighbourhoods. Participants answered more faster and more accurately to high frequency words. Words from high density neighbourhoods were responded to more accurately, but more slowly. The average lexical frequency of the neighbourhood was associated to a decrease in accuracy. Low frequency words were responded to more accurately in low density neighbours than in high density neighbours. The authors concluded that, although both word lexical frequency and neighbourhood density can, in principle, facilitate spoken word recognition, this effect was modulated by the frequency of the neighbourhood: when phonological neighbours are more frequent, lexical selection is hindered [@goldinger1989priming; @luce1990similarity].
@@ -127,22 +156,15 @@ The idealised lexicon considered by the models described above only considers wo
 
 The fact that phonological neighbourhoods and their structure impacts lexical processing poses an important question for bilingualism research. Are word representations in one language part of phonological or orthographic neighbours in the other language? @van1998orthographic addressed this issue in an experimental series and proposed the Bilingual Interactive Activation (BIA, later revised and relabelled as BIA+). In line with connectionist accounts of lexical processing this model advocated for lexical representations to establish both excitatory and inhibitory connections with other representations from the same of the other language [@mcclelland1981interactive], forming an integrated lexicon for both languages. @van1998orthographic tested Dutch-English bilinguals in a progressive demasking task (in each trial a words in presented in increasingly longer time windows interrupted by a checkerboard until the participant presses a button to type the word in a keyboard) or a lexical decision task (words a visually presented and the participant must decide as quickly as possible whether its a word in the target language or a non-word). The authors manipulated by size of the orthographic neighbourhood size of the words presented in its language (target language) or in the other language (non-target language). Interestingly, the authors reported participants' performance to be affected by the neighbourhood size of the presented word in the non-target language across both tasks. Specifically, participants took longer to respond to words with high neighbourhood density in the non-target language, even when participants completed the task in the target language exclusively (e.g., were presented with Dutch words exclusively). Monolinguals, on the other hand, were only affected by neighbourhood size in the target language. This provided evidence of cross-language interference between the word representation in the non-target language and the those in the target language. 
 
-More recently, @dijkstra2019multilink developed a model, Multilink, that integrates and formalises previous claims and predictions on how an interactive account of bilingual lexical access impacts word recognition, production, and more relevant to the aims of the present study, translation. This model 
+
+## Is the lexical route necessary for translation?: The Multilink model
+
+More recently, @dijkstra2019multilink implemented a localist-connectionist model, Multilink, that integrates and formalises previous claims and predictions on how an interactive account of bilingual lexical access impacts word recognition, production, and more relevant to the aims of the present study, translation. This model assumes (1) an integrated lexicon in which word representations from the two languages establish connections as words from the same language do; (2) during backward translation, the presented word in L2 can activate form-similar words in L1 that compete with the target word in L1; (3) contrary to the RHM model's assumption that translation equivalents are linked by excitatory connections (e.g., translation can be done via word-word connections), @dijkstra2019multilink suggest that such connections would spread activation though irrelevant words in the target language and therefore initially assumed that translation equivalents are exclusively connect throught their shared concept; (4) the strength of the association between L2 representations and their concept is a function of the language user's proficiceny in L2. Multilink considers the particular case of Dutch-English bilinguals to generated simulations and test them against experimental data. The authors simulated data from Multilink to mirror @christoffels2006memory translation elicitation task, and reported a remarkable correlation between Multilink's simulations and participant's data, with forward translation being faster than backward translation, contrary to the RHM model predictions. More relevant to the present study is the fact that the model also generated data suggesting that cognates are translated faster than non-cognates, in line with previous literature on the cognate advantage during translation. Overall, evidence from this model provides evidence for an integrated bilingual lexicon and for a facilitatory effect of cross-language similarity during translation. One of the main conclusions of @dijkstra2019multilink study is that word-word connections are not necessary for translation, as suggested by @kroll1994category: Multilink did not include such connections and still fitted experimental data. However, as they note, both their simulations and the data collected by @christoffels2006memory corresponded to high-proficiency bilinguals. In the case of the model simulations, vocabulary sizes were balanced in both languages and word-concept connections were equally strong for each member of the translation pairs in both languages. This scenario is actually contemplated by the @kroll1994category's RHM model. What @dijkstra2019multilink did not test, is the fit of Mutilink's predictions for low-proficiency, unbalanced bilinguals, whose vocabulary sizes are smaller or their word-concept connections are weaker in L2 than in L1. It is under this set of assumptions that the RHM model predicts participants to rely strongly on word-word connections to be able to translation words, especially from L2 to L1. This prediction, however, is untested in the Multilink model. 
 
 
-These studies tested the role of neighbourhood lexical frequency in samples of fairly proficient (i.e., balanced) bilinguals, and addressed this issue mostly at the orthographic level. Although these models contemplate the role of phonology in their accounts, the fact the it plays a secondary role in them limits their theoretical generalisability. One of the main reasons why a substantial part of the literature has avoided phonology as their modality of interest stems from the methodological level: working with phonological transcriptions is computationally challenging, and perhaps more critically, there is no clear way of measuring the similarity/dissimilarity between phonological forms of words within or across languages. Any possible way of measuring the overlap between two phonological forms at the surface level (e.g., between phonological transcriptions of the words) is very likely to neglect important sources of perceived similarity/dissimilarity. For example, one could measure
+## The present study
 
-spoken word recognition is unclear. Across several modalities, bilinguals' recognition of words in a language is affected by form-similarity and frequency of words in the other language. The parallel activation hypothesis accounts for this phenomenon, suggesting that lexical access is language-non selective. There is strong evidence supporting this claim in both comprehension, production, and translation, and across modalities. Much of this evidence stems from the fact that bilinguals' production times are faster when naming cognates (i.e., words whose translation in the other language is form-similar) than non-cognates. Both phonological and semantic links between translations underlie facilitatory effect of cognateness. The activation of form-similar words in the non-target language that do not share meaning with the target word, however, interferes with lexical selection. Disentangling the effect of semantic and phonological links during spoken word recognition is challenging when participants are bilingual.
-
-
-
-
-This has important implications to non-native word recognition: is word recognition facilitated by cognateness via translation? The answer is not straightforward. Disentangling the effect of form- and conceptual similarity in a bilingual sample is daunting, given that second language learners are able to exploit ...
-
-
-
-
-In the present study, we used a fully monolingual sample to disentangle the effect of neighbourhood frequency and phonological similarity. We asked participants to translate word in a language they had no significant experience with. This made sure that participants were unaware of any semantic relationship between the (non-native) words they heard and their translation, and could only rely on their phonological similarity to guess their translation. We tested the role of the amount of phonological similarity between the presented and the target words, the lexical frequency of the target word, and the average lexical frequency of the target word's phonological neighbourhood.
+In this study, we explored the plausibility of the lexical route in backward translation by testing monolingual participants. Monolinguals can be considered a particular (extreme) case of unbalanced bilingualism, in which which participants' vocabulary size in L2 is null, and word-concept connections are absent (i.e., set to zero in formal terms). In this scenario, participants can only rely on the similarity between the L2 form (presented as stimulus) and the L1 form (the target word). In other words, these participants can only use the lexical route to suceeed in the translation task. If participants are able to translate words in L2, even with no knowledge of the language it belongs to, based on their form-similarity with the target word, this would sugges that the lexical route is in place for low-proficiency bilinguals. If participants are not able to translation words from L2 to L1 regardless of their form-similarity, this would suggest that low-proficiency bilinguals rely entirely on word-concept connections for backward translation.
 
 
 # Methods
@@ -186,7 +208,7 @@ We extracted the lexical frequencies from SUBTLEX-UK for English words [@van2014
 
 We retrieved PTHN scores from the CLEARPOND database [@marian2012clearpond]. PTHN scores indicate the number of phonological neighbours of the target word with higher lexical frequency, as indicated by its score in the corresponding SUBTLEX database. CLEARPOND defines a phonological neighbour as a word whose phonological transcription in International Phonetic Alphabet (IPA) format (generated from eSPEAK, [http://espeak.sourceforge.net/](http://espeak.sourceforge.net/)) differs from that of the target word in only one addition, deletion, or substitution. PTHN scores in CLEARPOND measure have been calculated using corpora of similar size across language, allowing reliable cross-language comparisons. 
 
-Finally, we measured the phonological similarity between translation pairs by computing the Levenshtein similarity between their IPA translations using the `stringsim` function of the stringdist R package [@van2014stringdist]. This function computes the inverse of the Levenshtein distance between two character strings as a proportion. First, it computes the edit distance between two character strings (in this case, phoneme symbols) by counting the number of additions, deletions, and substitutions necessary to make both strings identical. This measure is then divided by the maximum distance (according to the length of the longest string) and then subtracted from 1. The result is a score that ranges from 0 to 1, where 0 indicates no similarity between the two strings and one indicates that both strings are identical. We computed this similarity measure (Levenshtein, from now on) for every translation pair in our stimuli lists. Table 1 summarises the lexical frequency, phonological neighbourhood density and phonological overlap of the words included in the Catalan and the Spanish lists.
+Finally, we measured the phonological similarity between translation pairs by computing the Levenshtein similarity between their IPA translations using the `stringsim` function of the stringdist R package [@van2014stringdist]. This function computes the inverse of the Levenshtein distance between two character strings as a proportion. First, it computes the edit distance between two character strings (in this case, phoneme symbols) by counting the number of additions, deletions, and substitutions necessary to make both strings identical [@levenshtein1966binary]. This measure is then divided by the maximum distance (according to the length of the longest string) and then subtracted from 1. The result is a score that ranges from 0 to 1, where 0 indicates no similarity between the two strings and one indicates that both strings are identical. We computed this similarity measure (Levenshtein, from now on) for every translation pair in our stimuli lists. Table 1 summarises the lexical frequency, phonological neighbourhood density and phonological overlap of the words included in the Catalan and the Spanish lists.
 
 Participants listened to one audio file in each trial. This audio file corresponded to a word in Catalan (for Spanish speakers, and for English participants allocated in the Catalan condition) or Spanish (for English speakers allocated in the Spanish condition). The audio files were the same ones used in child experiments conducted in the Laboratori de Recerca en Infància of Universitat Pompeu Fabra (Barcelona, Spain). These audio files were recorded by a proficient Catalan-Spanish female bilingual from the Metropolitan Area of Barcelona in a child-directed manner. Catalan and Spanish words were recorded at 44,100 Hz in separate files in the same session, and then de-noised using Audacity and normalised at peak intensity using Praat [@broersma2021praat]. The average duration of the audios was `r printnum(mean(stimuli$duration, na.rm = TRUE))` (*SD* = `r printnum(sd(stimuli$duration, na.rm = TRUE))`, Range = `r printnum(min(stimuli$duration, na.rm = TRUE))`-`r printnum(max(stimuli$duration, na.rm = TRUE))`). The average duration of the Catalan audios was `r printnum(mean(stimuli$duration[stimuli$group %in% c("ENG-CAT")], na.rm = TRUE))` seconds (*SD* = `r printnum(sd(stimuli$duration[stimuli$group %in% c("ENG-CAT")], na.rm = TRUE))`, Range = `r printnum(min(stimuli$duration[stimuli$group %in% c("ENG-CAT")], na.rm = TRUE))`-`r printnum(max(stimuli$duration[stimuli$group %in% c("ENG-CAT")], na.rm = TRUE))`), and the average duration of the Spanish audios was `r printnum(mean(stimuli$duration[stimuli$group %in% c("ENG-SPA")], na.rm = TRUE))` seconds (*SD* = `r printnum(sd(stimuli$duration[stimuli$group %in% c("ENG-SPA")], na.rm = TRUE))`, Range = `r printnum(min(stimuli$duration[stimuli$group %in% c("ENG-SPA")], na.rm = TRUE))`-`r printnum(max(stimuli$duration[stimuli$group %in% c("ENG-SPA")], na.rm = TRUE))`). 
 
@@ -298,7 +320,6 @@ str_repl <- c(
 )
 
 
-
 # fixed effects
 post_fix <- posterior_draws_fixed %>% 
   filter(str_detect(.variable, "b_")) %>% 
@@ -314,21 +335,17 @@ post_fix <- posterior_draws_fixed %>%
   stat_slab(aes(fill = stat(cut_cdf_qi(cdf, .width = c(.5, .8, .95), labels = percent_format())))) +
   stat_pointinterval(.width = 0, point_size = 1) +
   scale_fill_manual(values = c("#1A85FF", "#9ccaff", "#d2e5fc"), na.translate = FALSE) +
-  scale_x_continuous(labels = percent) +
+  scale_x_continuous(labels = function(x) percent(round(x, 1))) +
   labs(x = "P(Correct)", y = "Posterior probability density", fill = "CrI") +
   theme(
     legend.position = c(1, 0.1),
-    legend.background = element_rect(fill = NA),
-    legend.justification = "right",
-    legend.direction = "horizontal",
-    plot.caption.position = "plot",
-    # axis.text = element_text(size = 7),
     axis.title.y = element_blank(),
     axis.text.x = element_text(colour = "black"),
     axis.text.y = element_text(colour = "black", vjust = 0),
-    panel.grid.major.y = element_line(colour = "grey", size = 0.25)
+    panel.grid.major.y = element_line(colour = "grey", size = 0.5)
   ) 
 
+# SD of random effects
 post_sd <- posterior_draws_fixed %>% 
   filter(str_detect(.variable, "sd_")) %>% 
   mutate(
@@ -344,20 +361,14 @@ post_sd <- posterior_draws_fixed %>%
   labs(x = "SDs in P(Correct)", y = "Posterior probability density", fill = "CrI") +
   theme(
     legend.position = c(1, 0.1),
-    legend.background = element_rect(fill = NA),
-    legend.justification = "right",
-    legend.direction = "horizontal",
-    plot.caption.position = "plot",
-    plot.caption = element_text(hjust = 0),
-    # axis.text = element_text(size = 7),
-    panel.grid.major.y = element_line(colour = "grey", size = 0.25),
     axis.title.y = element_blank(),
     axis.text.x = element_text(colour = "black"),
-    axis.text.y = element_text(colour = "black")
+    axis.text.y = element_text(colour = "black", vjust = 0),
+    panel.grid.major.y = element_line(colour = "grey", size = 0.5)
   ) 
 
 
-
+# Pearson correlations between random effects
 corr_mat <- cov2cor(vcov(model_fits$fit_3)) 
 corr_mat[lower.tri(corr_mat)] <- NA
 
@@ -390,18 +401,12 @@ post_cors <- corr_mat %>%
     axis.title.x = element_blank(),
     axis.title.y = element_blank(),
     axis.text.x = element_blank(),
-    axis.text.y = element_blank(),
-    plot.background = element_rect(fill = NA)
+    axis.text.y = element_blank()
   )
 
 post_fix / (post_sd + post_cors + plot_layout(widths = c(0.6, 0.4))) +
   plot_layout(guides = "keep") & 
-  plot_annotation(tag_levels = "A") &
-  theme(
-    title = element_text(size = 8, face = "bold"),
-    plot.title.position = "plot", 
-    plot.title = element_text(hjust = 0.5)
-  )
+  plot_annotation(tag_levels = "A")
 
 
 
@@ -458,14 +463,7 @@ plot_m <- ggplot(m, aes(lv, .epred, colour = pthn, fill = pthn)) +
        title = "Population-level predictions") +
   scale_color_manual(values = c("#1E88E5", "#ff2976")) +
   scale_y_continuous(labels = function(x) percent(round(x, 2)), limits = c(0, 1), breaks = seq(0, 1, 0.2)) +
-  guides(colour = guide_legend(ncol = 2)) +
-  theme(
-    legend.position = "top",
-    legend.title = element_blank(),
-    axis.text.x = element_text(colour = "black"),
-    axis.text.y = element_text(colour = "black"),
-    panel.grid = element_line(colour = "grey")
-  )
+  guides(colour = guide_legend(ncol = 2)) 
 
 plot_m_re <- ggplot(m_re, aes(lv, .epred, colour = pthn, fill = pthn)) +
   facet_wrap(~participant) +
@@ -478,12 +476,13 @@ plot_m_re <- ggplot(m_re, aes(lv, .epred, colour = pthn, fill = pthn)) +
   guides(colour = guide_legend(ncol = 2)) +
   theme(
     legend.position = "none",
-    axis.text = element_blank(),
-    panel.grid = element_blank(),
+    axis.text.x = element_blank(),
+    axis.text.y = element_blank(),
+    axis.title.x = element_blank(),
+    axis.title.y = element_blank(),
+    axis.ticks = element_blank(),
     strip.text = element_blank(),
     strip.background = element_blank(),
-    axis.ticks = element_blank(),
-    axis.line = element_line(colour = "grey"),
     panel.spacing = unit(0.1, "lines")
   ) 
 
@@ -493,9 +492,6 @@ plot_m + plot_m_re +
   theme(
     legend.position = "top",
     legend.title = element_blank(),
-    title = element_text(size = 8, face = "bold"),
-    plot.title.position = "plot", 
-    plot.title = element_text(hjust = 0.5)
   )
 
 ```
@@ -552,10 +548,9 @@ ggplot(responses_item, aes(reorder(word_label, correct_prop), correct_prop, ymin
   scale_x_discrete(labels = function(x) str_remove(x, "___ENG-CAT|___ENG-SPA|___SPA-CAT")) +
   theme(
     legend.position = "none",
-    axis.text.y = element_text(size = 6, colour = "black"),
+    axis.text.y = element_text(size = 5, colour = "black", hjust = 1),
     axis.ticks = element_blank(),
     axis.text.x = element_text(size = 7, colour = "black"),
-    panel.grid.major.x = element_line(colour = "grey", linetype = "dotted")
   )
 
 ```
