Add manuscript plots with diagnostics

--- a/Rmd/manuscript.Rmd
+++ b/Rmd/manuscript.Rmd
@@ -58,6 +58,7 @@ draft: no
 csl: "apa7.csl"
 documentclass: apa7
 classoption: man
+appendix: "manuscript_appendix.Rmd"
 output:
   word_document:
     reference_docx: "manuscript_template.docx"
@@ -124,7 +125,7 @@ theme_set(
 Humans are able to recognise spoken words without much effort, even in adverse conditions such as compressed speech [@de1982relationship] or the loss of segmental information [@warren1970perceptual]. But even in the most ideal of the situations, the cognitive processes engaged in word recognition do not occur without uncertainty. The speech input activates multiple candidate lexical representations based on their similarity with the signal, and for word recognition to take place, one of the candidates must be selected. There is extensive literature about the influence on word recognition of the number of lexical candidates, their frequency, and their  phonological and semantic similarity with target words. Less is known about how all these factors affect the dynamics of word recognition in non-native languages.
 
 
-Listening to speech in a non-native language is more costly than doing so in native languages, regardless of the level of proficiency [REF]. The source of this increased cognitive effort is likely to originate at multiple levels. For example, some sounds in the speech signal do not correspond to any phoneme in the native language, making the process of matching sounds to phonemes complicated. This is the case of a Spanish native listening to words containing the guttural /ʁ/ in French. Language learners, however, are rarely completely naïve to the language they are listening to. All languages share, to some extent, similarities, frequently due to their typological closeness. These similarities which can be exploited by non-native listeners to process the speech signal. In the present research we investigate the extent to which adult listeners rely on phonological similarity between cross-language synonyms during word translation.
+Listening to speech in a non-native language is more costly than doing so in native languages, regardless of the level of proficiency [@lecumberri2010non]. The source of this increased cognitive effort is likely to originate at multiple levels. For example, some sounds in the speech signal do not correspond to any phoneme in the native language, making the process of matching sounds to phonemes complicated. This is the case of a Spanish native listening to words containing the guttural /ʁ/ in French. Language learners, however, are rarely completely naïve to the language they are listening to. All languages share, to some extent, similarities, frequently due to their typological closeness. These similarities which can be exploited by non-native listeners to process the speech signal. In the present research we investigate the extent to which adult listeners rely on phonological similarity between cross-language synonyms during word translation.
 
 
 
@@ -132,14 +133,11 @@ Cognates are cross-language synonyms whose form (e.g., phonology, orthography, s
 
 
 
-Cognates play a major role in virtually all models of bilingual lexical processing because they provide evidence that bilinguals access the lexicon in a language non-selective way. During word production and comprehension, lexical representations of both languages are activated, and the form similarity between both impacts bilinguals' performance in naming or lexical decision tasks [e.g., @costa2000cognate; @thierry2007brain]. In a seminal study, @costa2000cognate asked Spanish-Catalan adult bilinguals to name pictures in Spanish. Unbeknownst to participants, half of the labels associated to pictures were cognates in Spanish and Catalan (e.g., *puerta*-*porta*) while the other half were non-cognates (e.g., *mesa*-*taula*, meaning *table* in Spanish and Catalan). Surprisingly, Spanish-Catalan bilinguals named cognate pictures faster than non-cognate pictures, while Spanish monolinguals did not show this effect. This suggests that bilinguals activate the picture's word representations in both languages, and the phonological overlap between both labels facilitated the naming process.
-
-
-Additionally, cognates seem to be learnt more easily in L2 than non-cognates. @de2000hard presented Dutch natives pairs of Dutch words and pseudowords. Participants' performance learnt and retained better pairs with high orthographic similarity than pairs with low orthographic similarity [see also @lotto1998effects for Dutch natives learning Italian words].
+Cognates play a major role in virtually all models of bilingual lexical processing because they provide evidence that bilinguals access the lexicon in a language non-selective way. During word production and comprehension, lexical representations of both languages are activated, and the form similarity between both impacts bilinguals' performance in naming or lexical decision tasks [e.g., @costa2000cognate; @thierry2007brain]. In a seminal study, @costa2000cognate asked Spanish-Catalan adult bilinguals to name pictures in Spanish. Unbeknownst to participants, half of the labels associated to pictures were cognates in Spanish and Catalan (e.g., *puerta*-*porta*) while the other half were non-cognates (e.g., *mesa*-*taula*, meaning *table* in Spanish and Catalan). Surprisingly, Spanish-Catalan bilinguals named cognate pictures faster than non-cognate pictures, while Spanish monolinguals did not show this effect. This suggests that bilinguals activate the picture's word representations in both languages, and the phonological overlap between both labels facilitated the naming process. Additionally, cognates seem to be learnt more easily in L2 than non-cognates. @de2000hard presented Dutch natives pairs of Dutch words and pseudowords. Participants' performance learnt and retained better pairs with high orthographic similarity than pairs with low orthographic similarity [see also @lotto1998effects for Dutch natives learning Italian words].
 
 
 
-Cognates are not only learnt faster than non-cognates, but translated faster too. Early accounts of bilingual lexical access suggest that low-proficiency learners first established links between newly acquired words in L2 and their meanings through their L1 translation equivalents [@potter1984lexical]. As learners become more proficient, the connection between L2 representations and their meaning grows stronger, and L2 word processing becomes less reliant on the mediation of L1 representations. The Revised Hierarchical Model [RHM; @kroll1994category] captured this assumption and predicted that translating words from L1 to L2 (forward translation) should take longer than translating from L2 to L1 (backward translation). The rationale behind this prediction is that backward translation relies more strongly on direct word-word links between L1 and L2 representations, while forward translation would rely more strongly on the mediation between the concept and the two word forms. One of the consequences of this prediction is that backward translation should be more sensitive to the form similarity between the L1 and the L2 representations: cognate words should be retrieved faster than non-cognate words during backward translation.
+Cognates are not only learnt faster than non-cognates, but translated faster too. Early accounts of bilingual lexical access suggest that low-proficiency learners first established links between newly acquired words in L2 and their meanings through their L1 translation equivalents [@potter1984lexical]. As learners become more proficient, the connection between L2 representations and their meaning grows stronger, and L2 word processing becomes less reliant on the mediation of L1 representations. The Revised Hierarchical Model [RHM,   @kroll1994category] captured this assumption and predicted that translating words from L1 to L2 (forward translation) should take longer than translating from L2 to L1 (backward translation). The rationale behind this prediction is that backward translation relies more strongly on direct word-word links between L1 and L2 representations, while forward translation would rely more strongly on the mediation between the concept and the two word forms. One of the consequences of this prediction is that backward translation should be more sensitive to the form similarity between the L1 and the L2 representations: cognate words should be retrieved faster than non-cognate words during backward translation.
 
 
 To test these predictions, @degroot1994forward and @de1992determinants asked Dutch natives with high (yet non-native) English proficiency to translate words from either Dutch to English (forward translation, L1 to L2) or from English to Dutch (backward translation, L2 to L1). Participants were presented with written words in English or Dutch, and asked to speak out loud their translation in the other language as fast as possible. Results who that translation times and accuracy were roughly equivalent in across both forward and backward conditions, and that semantic variables (e.g., concreteness), were positively associated with participants' performance, especially in the forward translation condition. Cognates were translated equally fast in both conditions, but non-cognates were translated faster during backward than forward translation, and translation of cognates was less affected  by semantic variables than non-cognates. 
@@ -147,7 +145,7 @@ To test these predictions, @degroot1994forward and @de1992determinants asked Dut
 These findings suggest that both conceptually mediated and direct translation routes are active during translation, although backward translation relies more strongly on direct links between L1 and L2 representations, which makes it more sensitive to cognateness (than forward translation). Interestingly, higher-proficiency bilinguals tested in the same task showed similar results. However, subsequent studies did not find differences in participant's performance during forward and backward translation, or even found better performances in forward translation [@christoffels2006memory; @christoffels2013language], contrary to the predictions of the RHM. Further models build upon this model, introducing a wider range of connections in their theorised lexica.
 
 
-Since @kroll1994category proposed their RHM model, subsequent studies brought attention to the role of the network of connections that words establish with each other at the form-level (phonological or orthographic) or at the conceptual level. The Neighbourhood Activation Model [NAM; @luce1998recognizing] suggests that lexical selection is mediated not only by the lexical frequency of the target word (and the number of activated candidates), but also by the frequency of the candidates.
+Since @kroll1994category proposed their RHM model, subsequent studies brought attention to the role of the network of connections that words establish with each other at the form-level (phonological or orthographic) or at the conceptual level. The Neighbourhood Activation Model [NAM, @luce1998recognizing] suggests that lexical selection is mediated not only by the lexical frequency of the target word (and the number of activated candidates), but also by the frequency of the candidates.
 
 
 Subsequent behavioural experiments [e.g., @luce1998recognizing] show that English adult participants were tested in a lexical decision task in which words were presented across several conditions of noise-to-signal ratio. A computerised lexicon calculated number and average lexical frequency of phonological neighbours around each of the presented words. Participants answered more faster and more accurately to high frequency words, and words from high density neighbourhoods were also responded detected more accurately, but slowly. Therefore, average lexical frequency of  neighbourhoods was associated to a decrease in accuracy. Low frequency words were in fact detected more accurately in low density than in high density neighbours. These findings suggested that both word lexical frequency and neighbourhood density can facilitate spoken word recognition, but this effect is modulated by the frequency of the neighbourhood; when phonological neighbours are more frequent, lexical selection is hindered [@goldinger1989priming; @luce1990similarity].
