--- a/Rmd/references.bib
+++ b/Rmd/references.bib
@@ -682,3 +682,15 @@
   year={2003},
   publisher={Cambridge University Press}
 }
+
+@article{lecumberri2010non,
+  title={Non-native speech perception in adverse conditions: A review},
+  author={Lecumberri, Maria Luisa Garcia and Cooke, Martin and Cutler, Anne},
+  journal={Speech communication},
+  volume={52},
+  number={11-12},
+  pages={864--886},
+  year={2010},
+  publisher={Elsevier}
+}
+
